[tool.poetry]
name = "agenttest"
version = "0.1.0"
description = "pytest for AI agents – deterministic testing of non-deterministic systems"
authors = ["AgentTest Contributors"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/agenttest/agenttest"
repository = "https://github.com/agenttest/agenttest"
documentation = "https://agenttest.github.io/agenttest"
keywords = ["ai", "agent", "testing", "llm", "langchain", "llamaindex", "pytest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = ">=7.0"
pydantic = ">=2.0"
click = ">=8.0"
rich = ">=13.0"
litellm = ">=1.0"
msgpack = ">=1.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = ">=4.0"
mkdocs = ">=1.5"
mkdocs-material = ">=9.0"

[tool.poetry.scripts]
agenttest = "agenttest.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
